--- a/gradle/javadoc.gradle
+++ b/gradle/javadoc.gradle
@@ -57,43 +57,43 @@ allprojects {
             docEncoding 'UTF-8'
             addBooleanOption("html5", true)
             addBooleanOption("-allow-script-in-comments", true)
-            header = '''
-                    | <script type="text/javascript">
-                    | function setLocationHash() {
-                    |   try {
-                    |     locationHash = top.location.hash;
-                    |     if (window.name == "classFrame" && locationHash != "") {
-                    |       window.location.hash = locationHash;
-                    |     }
-                    |   } catch (error) {}
-                    | };
-                    | function setGATrackingCode() {
-                    |   if (window.name == "" || window.name == "classFrame") {
-                    |       var _elqQ = _elqQ || [];
-                    |       _elqQ.push(["elqSetSiteId", "413370795"]);
-                    |       _elqQ.push(["elqTrackPageView"]);
-                    |       (function () {
-                    |       function async_load() { var s = document.createElement("script"); s.type = "text/javascript"; s.async = true; s.src = "//img03.en25.com/i/elqCfg.min.js"; var x = document.getElementsByTagName("script")[0]; x.parentNode.insertBefore(s, x); }
-                    |       if (window.addEventListener) window.addEventListener("DOMContentLoaded", async_load, false);
-                    |       else if (window.attachEvent) window.attachEvent("onload", async_load);
-                    |       })();
-                    |   }
-                    | };
-                    | function setSearchUrlPrefix() {
-                    |   if (typeof getURLPrefix === 'function') {
-                    |     var getURLPrefixOri = getURLPrefix;
-                    |     getURLPrefix = function(ui) {
-                    |       var urlPrefix = getURLPrefixOri(ui);
-                    |       return (urlPrefix && urlPrefix != "undefined/"  ? urlPrefix: "");
-                    |     };
-                    |   } else {
-                    |     window.setTimeout(setSearchUrlPrefix, 500 );
-                    |   }
-                    | };
-                    | setLocationHash();
-                    | setGATrackingCode();
-                    | setSearchUrlPrefix();
-                    |
+            header = ''' \
+                    | <script type="text/javascript"> \
+                    | function setLocationHash() { \
+                    |   try { \
+                    |     locationHash = top.location.hash; \
+                    |     if (window.name == "classFrame" && locationHash != "") { \
+                    |       window.location.hash = locationHash; \
+                    |     } \
+                    |   } catch (error) {} \
+                    | }; \
+                    | function setGATrackingCode() { \
+                    |   if (window.name == "" || window.name == "classFrame") { \
+                    |       var _elqQ = _elqQ || []; \
+                    |       _elqQ.push(["elqSetSiteId", "413370795"]); \
+                    |       _elqQ.push(["elqTrackPageView"]); \
+                    |       (function () { \
+                    |       function async_load() { var s = document.createElement("script"); s.type = "text/javascript"; s.async = true; s.src = "//img03.en25.com/i/elqCfg.min.js"; var x = document.getElementsByTagName("script")[0]; x.parentNode.insertBefore(s, x); } \
+                    |       if (window.addEventListener) window.addEventListener("DOMContentLoaded", async_load, false); \
+                    |       else if (window.attachEvent) window.attachEvent("onload", async_load); \
+                    |       })(); \
+                    |   } \
+                    | }; \
+                    | function setSearchUrlPrefix() { \
+                    |   if (typeof getURLPrefix === 'function') { \
+                    |     var getURLPrefixOri = getURLPrefix; \
+                    |     getURLPrefix = function(ui) { \
+                    |       var urlPrefix = getURLPrefixOri(ui); \
+                    |       return (urlPrefix && urlPrefix != "undefined/"  ? urlPrefix: ""); \
+                    |     }; \
+                    |   } else { \
+                    |     window.setTimeout(setSearchUrlPrefix, 500 ); \
+                    |   } \
+                    | }; \
+                    | setLocationHash(); \
+                    | setGATrackingCode(); \
+                    | setSearchUrlPrefix(); \
+                    | \
                     | </script>'''.stripMargin()
         }
 
