--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -46,14 +46,9 @@ ext {
     }
     configureMavenRepositories = { project ->
         { ->
-            def snapshotsRepoUrl = 'https://oss.sonatype.org/content/repositories/snapshots/'
-            def releasesRepoUrl = 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
+            def ednaRepoUrl = 'http://maven-repo.mfms/nexus/content/repositories/mfms'
             maven {
-                url = project.version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
-                credentials {
-                    username project.hasProperty('nexusUsername') ? project.getProperty('nexusUsername') : ''
-                    password project.hasProperty('nexusPassword') ? project.getProperty('nexusPassword') : ''
-                }
+                url = ednaRepoUrl
             }
         }
     }
